crates/oxc_react_compiler/tests/snapshots/ssa-for-trivial-update.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-for-trivial-update.js
---
function foo() {
	let x = 1;
	for (const i = 0; true; 0) {
		x = x + 1;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
