crates/oxc_react_compiler/tests/snapshots/ssa-for.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-for.js
---
function foo() {
	let x = 1;
	for (let i = 0; i < 10; i++) {
		x = x + 1;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
