crates/oxc_react_compiler/tests/snapshots/ssa-multiple-phis.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-multiple-phis.js
---
function foo(a, b, c, d) {
	let x;
	x = a;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
