crates/oxc_react_compiler/tests/snapshots/ssa-nested-loops-no-reassign.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-nested-loops-no-reassign.js
---
// @xonly
function foo(a, b, c) {
	while (a) {
		while (b) {
			while (c) {}
		}
	}
	return 0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
