crates/oxc_react_compiler/tests/snapshots/ssa-nested-partial-phi.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-nested-partial-phi.js
---
function foo(a, b, c) {
	let x = a;
	if (b) {
		if (c) {
			x = c;
		}
		return x;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
