crates/oxc_react_compiler/tests/snapshots/ssa-nested-partial-reassignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-nested-partial-reassignment.js
---
function foo(a, b, c, d, e) {
	let x = null;
	if (a) {
		x = b;
	} else {
		if (c) {
			x = d;
		}
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
