crates/oxc_react_compiler/tests/snapshots/ssa-newexpression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-newexpression.js
---
import { c as _c } from "react/compiler-runtime";
function Foo() {}
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const a = [];
		const b = {};
		t0 = new Foo(a, b);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const c = t0;
	return c;
}
