crates/oxc_react_compiler/tests/snapshots/ssa-non-empty-initializer.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-non-empty-initializer.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	let x = t0;
	if (a) {
		x = 1;
	}
	const y = x;
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
