crates/oxc_react_compiler/tests/snapshots/ssa-objectexpression-phi.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-objectexpression-phi.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {
			x: 1,
			y: 3
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const t = t0;
	return t;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
